    - wxPython/demo/ListCtrl_edit.py (new demo)
    - wxPython/demo/Main.py (include new demo in demo app)
    - wxPython/wx/lib/mixins/listctrl.py (several improvements to 
      TextEditMixin)
    - wxPython/wx/lib/wxpTag.py (some small fixes)

Added (thanks to Kevin Ollivier!) wrappers for wx.WebKitCtrl for the
OSX build.  Other platforms will raise an exception if you try to use
it. 




2.5.2.8
-------

Predominantly a bug-fix release.

  * Fixed fatal error due to improper wrapping of wx.FSFile.

  * Fixed return type of EditableListBox.GetListCtrl

  * Give generic tree and list controls a DoGetBestSize so they play
    nicer with sizers when there is no minimal size.

  * Some tweaks in the demo and samples to correct layout, some
    flicker problems, and namespace use.

  * Add wx.Image.ConvertAlphaToMask

  * Minor corrections in wx.lib.dialogs

  * wx.FileHistory constructor now accepts the documented 2nd
    parameter.

  * Corrections for exceptions in the new ogl

  * Fixed XRCed to not use reparenting of windows to implement caching
    of property panels, since Reparent on wxMac is not implemented.

  * Add support for wxTAB_TRAVERSAL to the XRC handler for
    wxScrolledWindow. 

  * Add support for all wxListBox styles to the XRC handler for
    wxCheckListBox. 

  * Fix for wx.Listbook.DeleteAllPages to really delete everything.

  * wxGTK2 now supports alpha blended bitmap drawing

  * Made wx.grid.Grid play nicer with sizers.

  * etc.




2.5.2.7
-------

wx.ADJUST_MINSIZE is now the default behaviour for window items in
sizers.  This means that the item's GetMinSize and/or GetBestSize will
be called when calculating layout and the return value from that will
be used for the minimum size used by the sizer.  The wx.FIXED_MINSIZE
flag was added that will cause the sizer to use the old behaviour in
that it will *not* call the window's methods to determine the new best
size, instead the minsize that the window had when added to the sizer